--- a/SmartTravelPlanner/App.xaml
+++ b/SmartTravelPlanner/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="SmartTravelPlanner1.App"
+﻿<Application x:Class="SmartTravelPlanner.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SmartTravelPlanner1"
+             xmlns:local="clr-namespace:SmartTravelPlanner"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
