--- a/SmartTravelPlanner/MainWindow.xaml
+++ b/SmartTravelPlanner/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Button" HorizontalAlignment="Center" VerticalAlignment="Top" Height="40" Width="108" Margin="0,192,0,0"/>
+
     </Grid>
 </Window>
