--- a/SmartTravelPlanner/MainWindow.xaml
+++ b/SmartTravelPlanner/MainWindow.xaml
@@ -3,11 +3,34 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:UserTextBox="clr-namespace:SmartTravelPlanner"
         xmlns:local="clr-namespace:SmartTravelPlanner"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" ResizeMode="CanMinimize">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Center" VerticalAlignment="Top" Height="40" Width="108" Margin="0,192,0,0"/>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Height="40" Text="WELCOME TO" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"
+                   Margin="0,20,0,0"/>
+        <TextBlock Grid.Row="1" Height="40" Text="TRAVELER'S ADVENTURE" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center"
+                    Margin="0,0,0,30"/>
+        <UserTextBox:TextBox Grid.Row="2" Width="250" Height="40" HorizontalAlignment="Center" Placeholder="Enter name"/>
+        <UserTextBox:TextBox Grid.Row="3" Width="250" Height="40" HorizontalAlignment="Center" Margin="0,10,0,0" Placeholder="Enter location"/>
+        <Button Grid.Row="4" Width="150" Height="40" HorizontalAlignment="Center" Margin="0,10,0,0">
+            <TextBlock Text="Load Map" VerticalAlignment="Center"/>
+        </Button>
+        <Button Grid.Row="5" Width="200" Height="50" HorizontalAlignment="Center" Margin="0,30,0,0">
+            <TextBlock Text="Plan Route" VerticalAlignment="Center"/>
+        </Button>
+        <Button Grid.Row="6" Width="100" Height="40" HorizontalAlignment="Right" Margin="0,10,20,0">
+            <TextBlock Text="Exit" VerticalAlignment="Center"/>
+        </Button>
     </Grid>
 </Window>
