--- a/SmartTravelPlanner/MainWindow.xaml
+++ b/SmartTravelPlanner/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:UserTextBox="clr-namespace:SmartTravelPlanner"
         xmlns:local="clr-namespace:SmartTravelPlanner"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" ResizeMode="CanMinimize">
+        Background="#E6E2F3"
+        FontFamily="Georgia"
+        Title="Traveler's Adventure" Height="450" Width="800" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -18,16 +20,41 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Height="40" Text="WELCOME TO" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"
-                   Margin="0,20,0,0"/>
-        <TextBlock Grid.Row="1" Height="40" Text="TRAVELER'S ADVENTURE" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center"
-                    Margin="0,0,0,30"/>
+                   Margin="0,20,0,0" Foreground="#7243A9" FontWeight="Bold"/>
+        <TextBlock Grid.Row="1" Height="40" Text="Taveler's Adventure" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center"
+                    Margin="0,0,0,30" Foreground="#7243A9" FontWeight="Bold"/>
         <UserTextBox:TextBox Grid.Row="2" Width="250" Height="40" HorizontalAlignment="Center" Placeholder="Enter name"/>
         <UserTextBox:TextBox Grid.Row="3" Width="250" Height="40" HorizontalAlignment="Center" Margin="0,10,0,0" Placeholder="Enter location"/>
-        <Button Grid.Row="4" Width="150" Height="40" HorizontalAlignment="Center" Margin="0,10,0,0">
-            <TextBlock Text="Load Map" VerticalAlignment="Center"/>
+        <Button Grid.Row="4" Width="150" Height="40" HorizontalAlignment="Center" Margin="0,10,0,0"
+        Background="White" BorderThickness="0" Cursor="Hand">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border CornerRadius="15"
+                        BorderThickness="3"
+                        BorderBrush="#7D619B"
+                        Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Image Source="/images/load_map.png" Width="24" Height="24" Margin="0,0,8,0"/>
+                <TextBlock Text="Load Map" VerticalAlignment="Center" FontSize="16" FontWeight="Bold"/>
+            </StackPanel>
         </Button>
-        <Button Grid.Row="5" Width="200" Height="50" HorizontalAlignment="Center" Margin="0,30,0,0">
-            <TextBlock Text="Plan Route" VerticalAlignment="Center"/>
+        <Button Grid.Row="5" Width="200" Height="50" HorizontalAlignment="Center" Margin="0,30,0,0"
+        Background="#7658B2" BorderThickness="0" Cursor="Hand">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border CornerRadius="15"
+                        BorderThickness="3"
+                        BorderBrush="#604184"
+                        Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+            <TextBlock Text="Plan Route" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Foreground="White"/>
         </Button>
         <Button Grid.Row="6" Width="100" Height="40" HorizontalAlignment="Right" Margin="0,10,20,0">
             <TextBlock Text="Exit" VerticalAlignment="Center"/>
