--- a/SmartTravelPlanner/MainWindow.xaml
+++ b/SmartTravelPlanner/MainWindow.xaml
@@ -3,6 +3,7 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:local="clr-namespace:SmartTravelPlanner"
                   ShowsNavigationUI="False"
+                  Background="#E6E2F3"
                   Title="Traveler's Adventure"
                   Height="900" Width="1600">
     <NavigationWindow.Content>
