--- a/SmartTravelPlanner/Page1.xaml
+++ b/SmartTravelPlanner/Page1.xaml
@@ -1,8 +1,7 @@
 ﻿<Page x:Class="SmartTravelPlanner.Page1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:UserTextBox="clr-namespace:SmartTravelPlanner"
-      Background="#E6E2F3">
+      xmlns:UserTextBox="clr-namespace:SmartTravelPlanner">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="120"/>
@@ -10,64 +9,62 @@
             <RowDefinition Height="120"/>
             <RowDefinition Height="120"/>
             <RowDefinition Height="120"/>
-            <RowDefinition Height="150"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="WELCOME TO" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center"
-                   Foreground="#7243A9" FontWeight="Bold"/>
-        <TextBlock Grid.Row="1" Text="Traveler's Adventure" FontSize="36" VerticalAlignment="Center" HorizontalAlignment="Center"
+        <TextBlock Grid.Row="0" Text="WELCOME TO" FontSize="35" VerticalAlignment="Center" HorizontalAlignment="Center"
+                   Foreground="#7243A9" FontWeight="Bold" Margin="0,40,0,0"/>
+    <TextBlock Grid.Row="1" Text="Traveler's Adventure" FontSize="60" VerticalAlignment="Center" HorizontalAlignment="Center"
                    Foreground="#7243A9" FontWeight="Bold"/>
 
-        <UserTextBox:TextBox Grid.Row="2" Width="500" Height="50" HorizontalAlignment="Center" Placeholder="Enter name"/>
-        <UserTextBox:TextBox Grid.Row="3" Width="500" Height="50" HorizontalAlignment="Center" Placeholder="Enter location"/>
+    <UserTextBox:TextBox Grid.Row="2" Width="500" Height="70" HorizontalAlignment="Center" Placeholder="Enter name" Margin="0,30,0,0"/>
+    <UserTextBox:TextBox Grid.Row="3" Width="500" Height="70" HorizontalAlignment="Center" Placeholder="Enter location"/>
 
-        <Button Grid.Row="4" Width="400" Height="60" HorizontalAlignment="Center"
+    <Button Grid.Row="4" Width="300" Height="80" HorizontalAlignment="Center"
                 Background="White" BorderThickness="0" Cursor="Hand">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border CornerRadius="15"
-                            BorderThickness="3"
+        <Button.Template>
+            <ControlTemplate TargetType="Button">
+                <Border CornerRadius="15"
+                            BorderThickness="5"
                             BorderBrush="#7D619B"
                             Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Image Source="/images/load_map.png" Width="24" Height="24" Margin="0,0,8,0"/>
-                <TextBlock Text="Load Map" VerticalAlignment="Center" FontSize="16" FontWeight="Bold"/>
-            </StackPanel>
-        </Button>
-
-        <Button Grid.Row="5" Width="400" Height="70" HorizontalAlignment="Center"
+                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </Border>
+            </ControlTemplate>
+        </Button.Template>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Image Source="/images/load_map.png" Width="50" Height="50" Margin="0,0,8,0"/>
+            <TextBlock Text="Load Map" VerticalAlignment="Center" FontSize="35" FontWeight="Bold"/>
+        </StackPanel>
+    </Button>
+    <Button Grid.Row="5" Width="400" Height="100" HorizontalAlignment="Center"
                 Background="#7658B2" BorderThickness="0" Cursor="Hand" Click="ContinueButton_Click">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border CornerRadius="15"
-                            BorderThickness="3"
+        <Button.Template>
+            <ControlTemplate TargetType="Button">
+                <Border CornerRadius="15"
+                            BorderThickness="5"
                             BorderBrush="#604184"
                             Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-            <TextBlock Text="Plan Route" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Foreground="White"/>
-        </Button>
+                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </Border>
+            </ControlTemplate>
+        </Button.Template>
+        <TextBlock Text="Plan Route" VerticalAlignment="Center" FontSize="50" FontWeight="Bold" Foreground="White"/>
+    </Button>
 
-        <Button Grid.Row="6" Width="150" Height="50" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,20"
-                Background="#7658B2" BorderThickness="0" Cursor="Hand">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border CornerRadius="15" Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBlock Text="Exit" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" Margin="0,0,8,0"/>
-                <Image Source="/images/load_map.png" Width="24" Height="24" VerticalAlignment="Center"/>
-            </StackPanel>
-        </Button>
+    <Button Grid.Row="5" Width="150" Height="50" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,20"
+        Background="#7658B2" BorderThickness="0" Cursor="Hand">
+        <Button.Template>
+            <ControlTemplate TargetType="Button">
+                <Border CornerRadius="10" Background="{TemplateBinding Background}">
+                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </Border>
+            </ControlTemplate>
+        </Button.Template>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+            <TextBlock Text="Exit" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Foreground="White" Margin="0,0,8,0"/>
+            <Image Source="/images/exit.png" Width="40" Height="40" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+        </StackPanel>
+    </Button>
     </Grid>
 </Page>
