--- a/SmartTravelPlanner/Page1.xaml
+++ b/SmartTravelPlanner/Page1.xaml
@@ -14,11 +14,12 @@
 
         <TextBlock Grid.Row="0" Text="WELCOME TO" FontSize="35" VerticalAlignment="Center" HorizontalAlignment="Center"
                    Foreground="#7243A9" FontWeight="Bold" Margin="0,40,0,0"/>
-    <TextBlock Grid.Row="1" Text="Traveler's Adventure" FontSize="60" VerticalAlignment="Center" HorizontalAlignment="Center"
+
+        <TextBlock Grid.Row="1" Text="Traveler's Adventure" FontSize="60" VerticalAlignment="Center" HorizontalAlignment="Center"
                    Foreground="#7243A9" FontWeight="Bold"/>
 
-    <UserTextBox:TextBox Grid.Row="2" Width="500" Height="70" HorizontalAlignment="Center" Placeholder="Enter name" Margin="0,30,0,0"/>
-    <UserTextBox:TextBox Grid.Row="3" Width="500" Height="70" HorizontalAlignment="Center" Placeholder="Enter location"/>
+        <UserTextBox:TextBox x:Name="NameTextBox" Grid.Row="2" HorizontalAlignment="Center" Placeholder="Enter name" Margin="0,10,0,0"/>
+        <UserTextBox:TextBox x:Name="LocationTextBox" Grid.Row="3" HorizontalAlignment="Center" Placeholder="Enter location"/>
 
     <Button Grid.Row="4" Width="300" Height="80" HorizontalAlignment="Center"
                 Background="White" BorderThickness="0" Cursor="Hand">
