--- a/SmartTravelPlanner/TextBox.xaml
+++ b/SmartTravelPlanner/TextBox.xaml
@@ -1,22 +1,26 @@
 ﻿<UserControl x:Class="SmartTravelPlanner.TextBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SmartTravelPlanner"
              mc:Ignorable="d" 
              d:DesignHeight="40" d:DesignWidth="250">
     <Grid>
-        <Border CornerRadius="10" BorderThickness="3" BorderBrush="#7D619B" Background="White">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Border x:Name="borderInput" Grid.Row="0" CornerRadius="10" BorderThickness="3" BorderBrush="#7D619B" Background="White" Height="70" Width="500">
             <Grid>
                 <TextBox x:Name="txtInput" VerticalContentAlignment="Center" Background="Transparent"
-                 TextChanged="txtInput_TextChanged" BorderThickness="0" Padding="4,0,0,0" />
-                <TextBlock x:Name="tbPlaceholder" Text="{Binding Placeholder}" FontSize="25" FontWeight="Light" 
-                   Foreground="#604184" VerticalAlignment="Center" Margin="5,0,0,0"
-                   Panel.ZIndex="-1"/>
+                         TextChanged="txtInput_TextChanged" BorderThickness="0" Padding="4,0,0,0" FontSize="25"/>
+                <TextBlock x:Name="tbPlaceholder" Text="{Binding Placeholder, RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                           FontSize="25" FontWeight="Light" Foreground="#604184" VerticalAlignment="Center" Margin="5,0,0,0"
+                           Panel.ZIndex="-1"/>
                 <Button x:Name="btnClear" Width="50" Height="30" HorizontalAlignment="Right" 
-                    Background="Transparent" BorderThickness="0" Click="btnClear_Click"
-                    Focusable="False" Cursor="Hand">
+                        Background="Transparent" BorderThickness="0" Click="btnClear_Click"
+                        Focusable="False" Cursor="Hand">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <ContentPresenter/>
@@ -26,5 +30,8 @@
                 </Button>
             </Grid>
         </Border>
+
+        <TextBlock Grid.Row="1" x:Name="tbError" Text="This field cannot be empty!" 
+                   Foreground="Red" FontSize="16" Visibility="Collapsed" Margin="10,0,0,0"/>
     </Grid>
 </UserControl>
