--- a/SmartTravelPlanner/Page2.xaml
+++ b/SmartTravelPlanner/Page2.xaml
@@ -2,7 +2,54 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Background="#E6E2F3">
-    <Grid>
+    <Grid Height="676">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Planned Route:" FontSize="35" VerticalAlignment="Top" HorizontalAlignment="Center"
+           Foreground="#7243A9" FontWeight="Bold" Margin="0,-50,0,0"/>
+        
+        <Button Grid.Row="5" Width="400" Height="100" HorizontalAlignment="Center"
+            Background="#7658B2" BorderThickness="0" Cursor="Hand" Click="ContinueButton_Click" Grid.RowSpan="2">
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border CornerRadius="15"
+                        BorderThickness="5"
+                        BorderBrush="#604184"
+                        Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+            <TextBlock Text="Return" VerticalAlignment="Center" FontSize="50" FontWeight="Bold" Foreground="White"/>
+        </Button>
+
+        <Button Grid.Row="5" Width="150" Height="50" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,20"
+Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="2" Click="ExitButton_Click">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border CornerRadius="10" 
+                    BorderThickness="5"
+                    BorderBrush="#604184"
+                    Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                <TextBlock Text="Exit" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Foreground="White" Margin="0,0,8,0"/>
+                <Image Source="/images/exit.png" Width="40" Height="40" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+            </StackPanel>
+        </Button>
+
+
 
     </Grid>
 </Page>
