--- a/SmartTravelPlanner/Page2.xaml
+++ b/SmartTravelPlanner/Page2.xaml
@@ -2,7 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Background="#E6E2F3">
-    <Grid Height="676">
+    <Grid Height="900">
         <Grid.RowDefinitions>
             <RowDefinition Height="120"/>
             <RowDefinition Height="100"/>
@@ -13,11 +13,29 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Planned Route:" FontSize="35" VerticalAlignment="Top" HorizontalAlignment="Center"
-           Foreground="#7243A9" FontWeight="Bold" Margin="0,-50,0,0"/>
-        
-        <Button Grid.Row="5" Width="400" Height="100" HorizontalAlignment="Center"
-            Background="#7658B2" BorderThickness="0" Cursor="Hand" Click="ContinueButton_Click" Grid.RowSpan="2">
+        <TextBlock Text="Planned Route:" FontSize="35" VerticalAlignment="Center" HorizontalAlignment="Center"
+           Foreground="#7243A9" FontWeight="Bold" Margin="0,0,0,40"/>
+
+        <TextBlock Grid.Row="0" Text="total distance = 37372778" FontSize="25" VerticalAlignment="Center" HorizontalAlignment="Center"
+   Foreground="#7243A9" FontWeight="light" Margin="0,40,0,0"/>
+
+        <Button Grid.Row="4" Width="200" Height="80" HorizontalAlignment="Center"
+     Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="3" Margin="0,75,0,0">
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border CornerRadius="15"
+                 BorderThickness="5"
+                 BorderBrush="#604184"
+                 Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+            <TextBlock Text="Load" VerticalAlignment="Center" FontSize="50" FontWeight="Bold" Foreground="White" Cursor="AppStarting" IsEnabled="False"/>
+        </Button>
+
+        <Button Grid.Row="3" Width="150" Height="65" HorizontalAlignment="Center"
+            Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="3" Margin="0,50,200,0">
             <Button.Template>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border CornerRadius="15"
@@ -28,10 +46,25 @@
                     </Border>
                 </ControlTemplate>
             </Button.Template>
-            <TextBlock Text="Return" VerticalAlignment="Center" FontSize="50" FontWeight="Bold" Foreground="White"/>
+            <TextBlock Text="Save" VerticalAlignment="Center" FontSize="33" FontWeight="SemiBold" Foreground="White"/>
         </Button>
 
-        <Button Grid.Row="5" Width="150" Height="50" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,20"
+        <Button Grid.Row="3" Width="190" Height="65" HorizontalAlignment="Center"
+     Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="3" Margin="200,50,0,0">
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border CornerRadius="15"
+                 BorderThickness="5"
+                 BorderBrush="#604184"
+                 Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+            <TextBlock Text="Clear route" VerticalAlignment="Center" FontSize="33" FontWeight="SemiBold" Foreground="White"/>
+        </Button>
+
+        <Button Grid.Row="5" Width="150" Height="50" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,60"
 Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="2" Click="ExitButton_Click">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
@@ -49,6 +82,22 @@ Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="2" Click="E
             </StackPanel>
         </Button>
 
+        <Button Grid.Row="5" Width="150" Height="50" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20,0,0,60"
+Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="2" Click="ContinueButton_Click">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border CornerRadius="10" 
+                    BorderThickness="5"
+                    BorderBrush="#604184"
+                    Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                <TextBlock Text="Return" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Foreground="White" Margin="0,0,8,0"/>
+            </StackPanel>
+        </Button>
 
 
     </Grid>
