--- a/SmartTravelPlanner/Page2.xaml
+++ b/SmartTravelPlanner/Page2.xaml
@@ -6,96 +6,45 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="120"/>
             <RowDefinition Height="100"/>
+            <RowDefinition Height="300"/>
             <RowDefinition Height="120"/>
             <RowDefinition Height="120"/>
-            <RowDefinition Height="120"/>
-            <RowDefinition Height="3*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Planned Route:" FontSize="35" VerticalAlignment="Center" HorizontalAlignment="Center"
-           Foreground="#7243A9" FontWeight="Bold" Margin="0,0,0,40"/>
+        <TextBlock Grid.Row="0" Text="Planned Route:" FontSize="60" VerticalAlignment="Center" HorizontalAlignment="Center"
+            Foreground="#7243A9" FontWeight="Bold" Margin="0,0,0,0"/>
 
-        <TextBlock Grid.Row="0" Text="total distance = 37372778" FontSize="25" VerticalAlignment="Center" HorizontalAlignment="Center"
-   Foreground="#7243A9" FontWeight="light" Margin="0,40,0,0"/>
+        <TextBlock Grid.Row="1" Text="total distance = 37372778" FontSize="35" VerticalAlignment="Center" HorizontalAlignment="Center"
+            Foreground="#7243A9" FontWeight="light" Margin="0,0,0,60"/>
 
-        <Button Grid.Row="4" Width="200" Height="80" HorizontalAlignment="Center"
-     Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="3" Margin="0,75,0,0">
-            <Button.Template>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border CornerRadius="15"
-                 BorderThickness="5"
-                 BorderBrush="#604184"
-                 Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-            <TextBlock Text="Load" VerticalAlignment="Center" FontSize="50" FontWeight="Bold" Foreground="White" Cursor="AppStarting" IsEnabled="False"/>
-        </Button>
-
-        <Button Grid.Row="3" Width="150" Height="65" HorizontalAlignment="Center"
-            Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="3" Margin="0,50,200,0">
-            <Button.Template>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border CornerRadius="15"
-                        BorderThickness="5"
-                        BorderBrush="#604184"
-                        Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Button Grid.Row="3" Width="250" Height="70" HorizontalAlignment="Center"
+            Style="{StaticResource PurpleButtonStyle}" Margin="0,0,300,0">
             <TextBlock Text="Save" VerticalAlignment="Center" FontSize="33" FontWeight="SemiBold" Foreground="White"/>
         </Button>
 
-        <Button Grid.Row="3" Width="190" Height="65" HorizontalAlignment="Center"
-     Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="3" Margin="200,50,0,0">
-            <Button.Template>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border CornerRadius="15"
-                 BorderThickness="5"
-                 BorderBrush="#604184"
-                 Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Button Grid.Row="3" Width="250" Height="70" HorizontalAlignment="Center"
+            Style="{StaticResource PurpleButtonStyle}" Margin="300,0,0,0">
             <TextBlock Text="Clear route" VerticalAlignment="Center" FontSize="33" FontWeight="SemiBold" Foreground="White"/>
         </Button>
 
-        <Button Grid.Row="5" Width="150" Height="50" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,60"
-Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="2" Click="ExitButton_Click">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border CornerRadius="10" 
-                    BorderThickness="5"
-                    BorderBrush="#604184"
-                    Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Button Grid.Row="4" Width="250" Height="80" HorizontalAlignment="Center"
+            Style="{StaticResource PurpleButtonStyle}">
+            <TextBlock Text="Load" VerticalAlignment="Center" FontSize="50" FontWeight="Bold" Foreground="White"/>
+        </Button>
+
+        <Button Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,55"
+            Style="{StaticResource SmallPurpleButtonStyle}" Click="ExitButton_Click">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                <TextBlock Text="Exit" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Foreground="White" Margin="0,0,8,0"/>
-                <Image Source="/images/exit.png" Width="40" Height="40" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <TextBlock Text="Exit " FontSize="30" Foreground="White"/>
+                <Image Source="/images/exit.png" Width="40" Height="40"/>
             </StackPanel>
         </Button>
 
-        <Button Grid.Row="5" Width="150" Height="50" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20,0,0,60"
-Background="#7658B2" BorderThickness="0" Cursor="Hand" Grid.RowSpan="2" Click="ContinueButton_Click">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border CornerRadius="10" 
-                    BorderThickness="5"
-                    BorderBrush="#604184"
-                    Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
+        <Button Grid.Row="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20,0,0,55"
+            Style="{StaticResource SmallPurpleButtonStyle}" Click="ReturnButton_Click">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                <TextBlock Text="Return" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Foreground="White" Margin="0,0,8,0"/>
+                <TextBlock Text="Return" FontSize="30" Foreground="White"/>
             </StackPanel>
         </Button>
 
